static/css/s2.css
/* ... */
.searchContent .result .similar-trigger-box i {
  padding: 0 5px;
}
.searchContent .sheet_result .owner_image {
  height: 30px;
  width: 30px;
  align-self: flex-start;
}
.searchContent .sheet_result {
  height: auto;
  margin: 15px 0 20px 0;
  padding-bottom: 30px;
}
.searchContent .result + .loadingMessage {
  margin-top: 30px;
}
.readerNavMenu .content.sheetList {
  padding: 80px 15px 15px;
}
.readerNavMenu .yourSheetsLink.navButton {
  width: 98%;
  margin-bottom: 20px;
  text-transform: uppercase;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerNavMenu .sheet {
  display: flex;
  justify-content: space-between;
  padding: 20px 0;
  border-bottom: 1px solid #eee;
  color: black;
}
.readerNavMenu .sheet:hover{
  text-decoration: none;
}
.readerNavMenu .sheet:first-child {
  padding-top: 0;
}
.readerNavMenu .sheet .sheetImg {
  height: 40px;
  width: 40px;
  margin: 1px 0 0 0;
  border-radius: 2px;
}
.readerNavMenu .sheet .sheetTextInfo{
  display: flex;
  justify-content: flex-start;
}
.readerNavMenu .sheet:hover .sheetTextInfo{
  text-decoration: underline;
}
.readerNavMenu .sheet .sheetAuthTitle{
  display: flex;
  flex-flow: column;
  margin: auto 14px;
}
.readerNavMenu .sheet .sheetAuthor {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  font-size: 14px;
  margin-bottom: 6px;
  letter-spacing: 1px;
}
.readerNavMenu .sheet .sheetTitle{
  overflow: hidden;
  font-size: 16px;
  unicode-bidi: plaintext;
}
.readerNavMenu .sheet .sheetViews{
  color: #999;
  font-size: 13px;
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerNavMenu .sheet:hover .sheetViews{
  display: inline-block ;
  text-decoration: none;
}
.interface-english .readerPanel .readerNavMenu .tagsList .gridBox {
  direction: ltr;
}
.interface-hebrew .readerPanel .readerNavMenu .tagsList .gridBox {
  direction: rtl;
}
.tagsList .heOnly {
  direction: rtl;
}
.tagsList .enOnly {
  direction: ltr;
}
.readerControls {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  box-sizing: border-box;
  text-align: center;
  z-index: 100;
  height: 60px;
  line-height: 60px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
  background-color: #FBFBFA;
}
.sepia .readerControls {
  background-color: #F3F3F1;
}
.dark .readerControls {
  background-color: #2D2D2B;
  color: white;
  border-color: #444;
}
.dark .readerControls .readerTextToc .readerTextTocBox {
  color: white;
}
.readerControls.connectionsHeader {
  background-color: #F3F3F2;
  white-space: nowrap;
  box-shadow: none;
}
.readerControls.connectionsHeader.fullPanel  {
  background-color: #EDEDED;
}
.readerControls .connectionsPanelHeader .connectionsHeaderTitle {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 16px;
  font-weight: lighter;
}
.connectionsPanelHeader .connectionsHeaderTitle.active {
  text-transform: none;
  cursor: pointer;
}
.connectionsHeaderTitle .fa-chevron-left {
  margin-right: 10px;
}
.connectionsHeaderTitle .fa-chevron-right {
  margin-left: 10px;
}
.connectionsHeaderTitle .fa-chevron-left, .connectionsHeaderTitle .fa-chevron-right{
  color: #999;
}
.readerControls .readerControlsInner {
  position: relative;
  width: 700px;
  margin: 0 auto;
  padding: 0 30px;
  display: flex;
  justify-content: space-between;
  max-width:  100%;
  box-sizing: border-box;
}
.readerControls.connectionsHeader .readerControlsInner {
  padding: 0 34px;
}
.singlePanel .readerControls .readerControlsInner {
  padding: 0 10px;
}
.readerControls .readerTextToc a {
  color: inherit;
}
.readerControls .readerTextToc a:hover {
  text-decoration: none;
}
.readerControls .readerTextToc .readerTextTocBox a {
  display: flex;
  align-items: center;
  justify-content: center;
}
.readerControls.connectionsHeader .readerTextToc {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  color: #666;
  width: 100%;
}
.readerControls .readerTextToc.attributed .readerTextTocBox {
  line-height: 1.2;
}
.readerControls .readerTextToc .categoryAttribution {
  font-style: italic;
  font-size: 15px;
  color: #999;
  margin: 0 2px;
}
.readerControls .readerTextToc .categoryAttribution .he {
  font-style: normal;
}
.interface-english .leftButtons,
.interface-hebrew .rightButtons {
  display: flex;
  flex-direction: row;
  text-align: left;
}
.interface-english .rightButtons,
.interface-hebrew .leftButtons {
  display: flex;
  flex-direction: row;
  text-align: right;
}
/* icons need a little nudge in flipped hebrew mode */
.interface-hebrew .rightButtons {
  margin-left: -3px;
}
.interface-hebrew .leftButtons {
  margin-right: 2px;
}
.leftButtons .saveButton,
.rightButtons .saveButton {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 40px;
  height: 56px;
  cursor: pointer;
}
.saveButton img {
  height: 20px;
  width: 20px;
  opacity: 0.5;
  margin-top: 2px;
}
.rightButtons .saveButton.tooltip-toggle::before {
  top: 47px;
  left: -50px;
}
.interface-hebrew .rightButtons .saveButton.tooltip-toggle::before {
  left: auto;
  right: -50px;
}
.saveButton.tooltip-toggle.three-dots-button {
  background-color: #ededec;
  margin-bottom: 13px;
  padding: 0 6px;  /* HACK: setting width and height to equal values doesn't make this circular, but this does! */
  height: 22px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
}
.three-dots-button img {
  width: 10px;
  height: 10px;
  margin-top: 0;
}
.topicPanel .mainColumn .saveLine .saveButton.three-dots-button {
  margin-left: 10px;
  margin-right: 0;
  margin-bottom: 13px;
  padding-bottom: 0;
}
.interface-hebrew .topicPanel .mainColumn .saveLine .saveButton.three-dots-button {
  margin-left: 0;
  margin-right: 10px;
}
.interface-hebrew .topicPanel .three-dots-button {
  margin-left: 0px;
  margin-right: 10px;
}
/* ... */

